--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,59 @@
-<h1>
-  {{title}}
-</h1>
-<router-outlet></router-outlet>
+<!doctype html>
+<html lang="en">
+
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Template • TodoMVC</title>
+	
+</head>
+
+<body>
+	<section class="todoapp">
+		<header class="header">
+			<app-title></app-title>
+			<input class="new-todo"
+			 [attr.data-myhint]="inputHint"
+			 [placeholder]="inputHint" [(ngModel)]="todo" #item (keyup)="addTodo($event, item.value)" autofocus>
+
+
+		</header>
+		<!-- This section should be hidden by default and shown when there are todos -->
+		<section class="main" *ngIf="todos.length  > 0">
+			<input class="toggle-all" type="checkbox" (click)="toggleAll($event.target.checked)">
+			<label for="toggle-all">Mark all as complete</label>
+			<ul class="todo-list">
+				<!-- These are here just to show the structure of the list items -->
+				<!-- List items should get the class `editing` when editing and `completed` when marked as completed -->
+				<li [ngClass]="{completed: item.isChecked}" *ngFor="let item of todos | filter:selected_type ">
+					<!--<li [ngClass]="{completed: item.isChecked}" *ngFor="let item of todos | filter:footer.selected_type ">-->
+					<div class="view">
+						<input class="toggle" [(ngModel)]="item.isChecked" type="checkbox" checked>
+						<label>{{item.name | uppercase}}</label>
+						<button class="destroy" (click)="remove(todo)"></button>
+					</div>
+					<input class="edit" value="Create a TodoMVC template">
+				</li>
+			</ul>
+		</section>
+		<!-- This footer should hidden by default and shown when there are todos -->
+		<app-footer #footer [todos]="todos" (clear)="clearCompleted($event)" (pass)="getSelectedType($event)" ></app-footer>
+
+	</section>
+	<footer class="info">
+		<p>Double-click to edit a todo<a (click)="save()">save</a></p>
+		<!-- Remove the below line ↓ -->
+		<p>Template by <a href="http://sindresorhus.com">Sindre Sorhus</a></p>
+		<!-- Change this out with your name and url ↓ -->
+		<p>Created by <a href="http://todomvc.com">you</a></p>
+		<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
+	</footer>
+
+	<br>
+	<!--<pre>{{data$ | async | json}}</pre>-->
+
+	<!--會瘋狂無限迴圈-->
+	<!--<pre>{{get() | async | json}}</pre>-->
+</body>
+
+</html>
